fix footer logo img padding; add id to important buttons; add some flex-wrap; update css

--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,17 @@ p {
     padding: 20px 20px;
 }
 
+img {
+    max-width: 100%;
+}
 /* header */
 
 header {
     padding: 15px;
+}
+
+nav {
+    flex-wrap: wrap;
 }
 
 a {
@@ -60,18 +67,18 @@ a {
     text-decoration: none;
 }
 
+/* main */
+
 main section > div {
     margin-bottom: 200px;
     margin-top: 100px;
 }
 
-
- /* main */
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 10px 10px;
+    flex-wrap: wrap;
 }
 
 .container-small{
@@ -159,7 +166,8 @@ main section > div {
 .text-dark {
     color: var(--dark)
 }
- /* id */
+ 
+/* id */
 
 #hero {
     background-image: url(../img/jumbo.png);
@@ -168,7 +176,7 @@ main section > div {
     display: flex;
     justify-content: space-between; 
     align-items: center;
-    text-align: center 
+    text-align: center;
 }
 
 #technology img {
@@ -193,6 +201,7 @@ footer li{
 footer h3 {
     padding: 6px 10px;
 }
+
 select {
     border: none;
     padding-left: 10px;
@@ -203,8 +212,9 @@ i {
 }
 
 .left {
-    width: 20%;
-} 
+    width: 25%;
+}
+
 .left img {
     height: 20px;
     width: 25px;
@@ -217,17 +227,16 @@ i {
 }
 
 .right {
-    width: 80%;
-}
-
-.right ul {
-    width: 20%;
+    width: 75%;
 }
 
 .bottom {
     border-top: 1px solid var(--blue) ;
 }
 
+.close {
+    padding: 0;
+}
 /* utility */
 
 .d-flex {
@@ -245,6 +254,7 @@ i {
 .c-reverse {
     flex-direction: column-reverse;
 }
+
 .s-between {
     justify-content: space-between;
 }
@@ -262,6 +272,19 @@ i {
 }
 
 .f-wrap {
-    flex-wrap: nowrap
+    flex-wrap: wrap
 }
 
+/* hover */
+
+li > a:hover {
+    text-decoration: underline;
+}
+
+#login:hover {
+    color: var(--blue);
+}
+
+#download:hover {
+    color: red;
+}
